k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: retoucherirving
  labels:
    name: retoucherirving
    environment: production
